--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@vicons/ionicons5": "^0.12.0",
+    "@videojs-player/vue": "^1.0.0",
     "axios": "^1.4.0",
     "querystring": "^0.2.1",
     "vfonts": "^0.0.3",
     "vicons": "^0.0.1",
+    "video.js": "^8.3.0",
     "vue": "^3.2.47",
     "vue-i18n": "9.3.0-beta.24",
     "vue-router": "^4.2.2",
